@@ -1,3 +1,9 @@
+2004-11-11  Not Zed  <NotZed@Ximian.com>
+
+	* camel/camel-exchange-folder.c
+	(camel_exchange_folder_add_message): make it work with message_id
+	rather than references->references[0] again.
+
 2004-11-10  Not Zed  <NotZed@Ximian.com>
 
 	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
